embrace palantir